
  * Bugfixes
    * Fixed bug 257 "Mute status effect broken for enemies" [James Paige]
    * Fixed bug 5 "First Target attacks can hit targets besides the first"
      [James Paige]
    * Fixed bug 476, off-by-one-error in "set victory music" [James Paige]
    * Fixed bug 484 "Do not show spell lists if empty" was only working in
      battle for the first spell list [James Paige]

  * New Plotscripting Commands
    * get victory music

  * Vikings of Midgard
  
  * Stuff only Developers Will Notice
    * BattleStats UDT [James Paige]

Sept 21 2007 [ubersetzung]
  * New Features
    * New sample game! Fenrir Lunaris's modern retro epic fantasy masterpiece
      Vikings of Midgard! [Fenrir-Lunaris]
    * New Music Formats. In addition to BAM and MIDI, you can also play
      MP3, OGG, MOD, XM, S3M and IT [Mike Caron]
    * New NPC movement type: Walk In Place [James Paige]
    * 8-bit bitmaps can now be imported as backdrops and tilesets [Mike, Ralph]
    * Sound effects. in WAV, OGG, or MP3 format [Mike Caron]
    * Sound effect triggers in battle [Mike Caron]
    * Attacks can now consume or give items (up to three at once!) [Mike Caron]
    * "Transparent" colour in sprite editor can now be chosen (only affects the
      sprite editor, so you can distinguish "transparent" from "black") [Mike]
    * New functionality for the key is pressed() command, pertaining to
      joysticks [Mike Caron]
    * Browse menu (game + custom) now shows a drivelist under windows and lets
      you browse to root [Ralph Versteegen]
    * Press Ctrl + H while browsing to display hidden files and folders
      [James Paige]
    * Press a key in the browser to cycle through files and directories with
      that first letter [Ralph Versteegen]
    * Browse menu displays unlumped RPG files if the folder is named
      with a .rpgdir extension [James Paige]
    * You can choose an RPG to edit in custom with the same browse menu